# a0-bridge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_connection.py
src/a0_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/a0_mcp/adapters/: __init__.py  base.py  v1.py  v2.py
